--- a/Pages/UserInfo.cshtml
+++ b/Pages/UserInfo.cshtml
@@ -16,7 +16,7 @@
                         {
                             <p class="text-muted mb-4">@Model.WorkingHours</p>
                             <div class="d-flex justify-content-center mb-2">
-                                <a href="/OfferedSP"><button type="button" class="btn btn-outline-primary ms-1">View Offered P/S</button></a>
+                                <a href="/OfferedSP"><button type="button" class="btn btn-outline-primary ms-1">View My P/S</button></a>
                             </div>
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="/ServiceStatus"><button type="button" class="btn btn-outline-primary ms-1">Update Service Status</button></a>
