--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -14,32 +14,32 @@
                         <span>Products & Services</span>
                     </div>
                     <ul>
-                        <li><a href="#">Artwork</a></li>
-                        <li><a href="#">Handcrafted jewelry</a></li>
-                        <li><a href="#">Home decor items</a></li>
-                        <li><a href="#">Clothing and accessories</a></li>
-                        <li><a href="#">Pottery and ceramics</a></li>
-                        <li><a href="#">Woodwork and furniture</a></li>
-                        <li><a href="#">Antiquing and restoration</a></li>
-                        <li><a href="#">Painting and drawing</a></li>
-                        <li><a href="#">Graphic design</a></li>
-                        <li><a href="#">Photography</a></li>
-                        <li><a href="#">Fashion Design</a></li>
-                        <li><a href="#">Mechanical and repair</a></li>
-                        <li><a href="#">Carpentry</a></li>
+                        <li><a href="/Products">Artwork</a></li>
+                        <li><a href="/Products">Handcrafted jewelry</a></li>
+                        <li><a href="/Products">Home decor items</a></li>
+                        <li><a href="/Products">Clothing and accessories</a></li>
+                        <li><a href="/Products">Pottery and ceramics</a></li>
+                        <li><a href="/Products">Woodwork and furniture</a></li>
+                        <li><a href="/Services">Antiquing and restoration</a></li>
+                        <li><a href="/Services">Painting and drawing</a></li>
+                        <li><a href="/Services">Graphic design</a></li>
+                        <li><a href="/Services">Photography</a></li>
+                        <li><a href="/Services">Fashion Design</a></li>
+                        <li><a href="/Services">Mechanical and repair</a></li>
+                        <li><a href="/Services">Carpentry</a></li>
                     </ul>
                 </div>
             </div>  
             <div class="col-lg-9">
                 <div class="hero__search">
                     <div class="hero__search__form">
-                        <form action="#">
+                        <form method="get" action="/Home">
                             <div class="hero__search__categories">
                                 <div class="dropdown">
-                                    Search All Categories 
+                                    Search All Categories
                                 </div>
                             </div>
-                            <input type="text" placeholder="What do you need?">
+                            <input type="text" name="keyword" placeholder="What do you need?">
                             <button type="submit" class="site-btn">SEARCH</button>
                         </form>
                     </div>
@@ -49,7 +49,7 @@
                         <span>JOPERA</span>
                         <h2>Artwork <br />100% Creative</h2>
                         <p>Seamlessly Sell or Find Unique Handmade Treasures</p>
-                        <a href="~/Products" class="primary-btn">SHOP NOW</a>
+                        <a href="~/Home" class="primary-btn">SHOP NOW</a>
                     </div>
                 </div>
             </div>
