--- a/Pages/Services.cshtml
+++ b/Pages/Services.cshtml
@@ -160,7 +160,7 @@
                         </ul> *@
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="/ServiceView?ServiceID=@Service.serviceID">@Service.Name</a></h6>
+                            <h6><a href="/ServiceView?ServiceID=@Service.serviceID&FreelancerID=@Service.FreelancerID">@Service.Name</a></h6>
                             <h5>@Service.Price</h5>
                         </div>
                     </div>
