--- a/Pages/ServiceView.cshtml
+++ b/Pages/ServiceView.cshtml
@@ -65,7 +65,8 @@
 
                 <div class="row">
                     <dt class="col-3">Released by:</dt>
-                    <dd class="col-9">@Model.FreelancerName</dd>
+                    <dd class="col-9"><a href="/FreelancerProfile?FreelancerID=@Model.FreelancerID">@Model.FreelancerName</a></dd>
+                    
                 </div>
 
                 <hr />
