--- a/Pages/Services.cshtml
+++ b/Pages/Services.cshtml
@@ -161,7 +161,7 @@
                         </div>
                         <div class="featured__item__text">
                             <h6><a href="/ServiceView?ServiceID=@Service.serviceID">@Service.Name</a></h6>
-                            <h5>@Service.Price</h5>
+                            <h5>$@Service.Price</h5>
                         </div>
                     </div>
                 </div>
